# rocketmq

./: .asf.yaml  .bazelrc  .drone.yml  .gitignore  .gitmodules  .licenserc.yaml  .travis.yml  1  BUILD.bazel  BUILDING  CHANGELOG  CODEOWNERS  CONTRIBUTING.md  DISCLAIMER  LICENSE  LICENSE.txt  METRICS_REFACTORING_GUIDE.md  MODULE.bazel  NOTICE  PULL_REQUEST_TEMPLATE.md  README.cn.md  README.md  WORKSPACE  bazel-steward.yaml  build.gradle  build.sh  bump-version.sh  deploy.bat  develop.sh  devenv  eclipse.bat  install.bat  install.sh  merge.sh  pom.xml  record.txt  release-client.xml  release.properties  release.xml  settings.gradle  (+4 more)
acl/: BUILD.bazel  pom.xml
acl/acl-center/: pom.xml
acl/acl-dao/: pom.xml
acl/acl-dao/src/main/resources/mybatis/: AclDAOMapper.xml  mybatis-config.xml
acl/acl-dao/src/test/java/: testDAO.java
acl/acl-hook/: pom.xml
acl/acl-starter/: pom.xml
acl/src/test/resources/: logback-test.xml  rmq.logback-test.xml
acl/src/test/resources/access_acl_conf/acl/: plain_acl.yml
acl/src/test/resources/acl_hook/: plain_acl.yml
acl/src/test/resources/both_acl_file_folder_conf/conf/: plain_acl.yml
acl/src/test/resources/conf/: plain_acl-test.yml  plain_acl.yml  plain_acl_bak.yml  plain_acl_correct.yml  plain_acl_format_error.yml  plain_acl_incomplete.yml  plain_acl_null.yml  plain_acl_with_no_accouts.yml  transport.yml
acl/src/test/resources/conf/acl/: plain_acl.yml
acl/src/test/resources/conf/plain_acl/: plain_acl_default.yml  plain_acl_rocketmq2.yml
acl/src/test/resources/conf/plain_acl_bak/: plain_acl_bak.yml
acl/src/test/resources/conf/watch/: plain_acl_watch.yml
acl/src/test/resources/empty_acl_folder_conf/conf/: plain_acl.yml
acl/src/test/resources/namespace/conf/: plain_acl.yml
acl/src/test/resources/update_global_white_addr/conf/: plain_acl.yml
acl/src/test/resources/watch/conf/: plain_acl.yml
auth/: BUILD.bazel  pom.xml
broker/: BUILD.bazel  pom.xml
broker/src/main/resources/: rmq.broker.logback.xml  transaction.sql
broker/src/test/resources/: logback-test.xml  rmq.logback-test.xml
broker/src/test2/resources/: logback-test.xml
client/: BUILD.bazel  pom.xml  svm.sh
client/config/: reflect-config.json
client/native/: rocketMQ.h
client/src/main/resources/: log4j2_rocketmq_client.xml  log4j_rocketmq_client.xml  logback_rocketmq_client.xml  rmq.client.logback.xml
client/src/test/resources/: log4j2.xml
client/src/test/resources/conf/: plain_acl_incomplete.yml
common/: BUILD.bazel  pom.xml
common/src/main/cpp/: CMakeLists.txt  org_apache_rocketmq_common_UtilAll.cpp  org_apache_rocketmq_common_UtilAll.h
common/src/main/resources/: project.properties
common/src/resources/: librocketmq_util_all.dylib
controller/: BUILD.bazel  pom.xml
controller/src/main/resources/: rmq.controller.logback.xml
controller/src/test/resources/: logback-test.xml
namesrv/: BUILD.bazel  pom.xml
namesrv/src/main/resources/: rmq.namesrv.logback.xml
proxy/: BUILD.bazel  README.md  pom.xml
proxy/src/main/resources/: rmq.proxy.logback.xml
proxy/src/test/resources/backup/channel/: InvocationChannel.java  SimpleChannel.java  SimpleChannelHandlerContext.java
proxy/src/test/resources/rmq-proxy-home/conf/: logback_proxy.xml  rmq-proxy.json
remoting/: BUILD.bazel  pom.xml
remoting/src/test/resources/certs/: badClient.key  badClient.pem  badServer.key  badServer.pem  ca.pem  client.key  client.pem  privkey.pem  server.key  server.pem
remoting/src/test/resources/service/: org.apache.rocketmq.remoting.RemotingServer
store/: 100  BUILD.bazel  pom.xml
store/config/: delayOffset.json
store/null/config/: timercheck
store/src/main/java/: Java NIO内存映射模型图说明.txt  RocketMQ同步&&异步刷盘两种方式说明.txt  RokcetMQ文件存储PageCache机制说明.txt  store设计架构图说明.txt  预分配MappedFile的主要过程说明.txt
store/src/test/java/stats/: BrokerStatsManagerTest.java
store/src/test/resources/: logback-test.xml  rmq.logback-test.xml
test/: BUILD.bazel  consumer.sh  master.sh  mtclient.sh  pom.xml  producer.sh  server.sh  slave.sh  tools.sh
test/src/main/resources/schema/: org.apache.rocketmq.broker.mqtrace.SendMessageHook.schema  org.apache.rocketmq.client.consumer.DefaultLitePullConsumer.schema  org.apache.rocketmq.client.consumer.DefaultMQPushConsumer.schema  org.apache.rocketmq.client.consumer.listener.MessageListenerConcurrently.schema  org.apache.rocketmq.client.producer.DefaultMQProducer.schema  org.apache.rocketmq.client.producer.SendCallback.schema
test/src/main/resources/schema/api/: org.apache.rocketmq.broker.mqtrace.ConsumeMessageHook.schema  org.apache.rocketmq.client.consumer.DefaultMQPullConsumer.schema  org.apache.rocketmq.client.consumer.listener.ConsumeConcurrentlyContext.schema  org.apache.rocketmq.client.consumer.listener.ConsumeOrderlyContext.schema  org.apache.rocketmq.client.consumer.listener.MessageListenerOrderly.schema  org.apache.rocketmq.client.hook.EndTransactionHook.schema  org.apache.rocketmq.client.producer.MessageQueueSelector.schema  org.apache.rocketmq.client.producer.SendResult.schema  org.apache.rocketmq.client.producer.SendStatus.schema  org.apache.rocketmq.common.message.Message.schema  org.apache.rocketmq.common.message.MessageExt.schema  org.apache.rocketmq.common.message.MessageQueue.schema  org.apache.rocketmq.common.protocol.body.ConsumeStatus.schema  org.apache.rocketmq.remoting.RPCHook.schema  (+1 more)
test/src/main/resources/schema2/: org.apache.rocketmq.client.consumer.DefaultLitePullConsumer.schema  org.apache.rocketmq.client.consumer.DefaultMQPullConsumer.schema  org.apache.rocketmq.client.consumer.DefaultMQPushConsumer.schema  org.apache.rocketmq.client.producer.DefaultMQProducer.schema  org.apache.rocketmq.common.protocol.RequestCode.schema  org.apache.rocketmq.remoting.RPCHook.schema  org.apache.rocketmq.tools.admin.DefaultMQAdminExt.schema
test/src/test/resources/: log4j.xml  log4j2.xml  logback-test.xml
tieredstore/: BUILD.bazel  README.md  pom.xml
tieredstore/src/test/resources/: rmq.logback-test.xml
tools/: BUILD.bazel  pom.xml
tools/src/main/resources/: rmq.tools.logback.xml
(+6654 files in other folders)
