load("//bazel:GenTestRules.bzl", "GenTestRules")

java_library(
    name = "acl",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//remoting",
        "//logging", 
        "//srvutil",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:commons_validator_commons_validator",
        "@maven//:com_github_luben_zstd_jni",
        "@maven//:org_lz4_lz4_java",
        "@maven//:com_alibaba_fastjson",
        "@maven//:io_netty_netty_all",
        "@maven//:org_yaml_snakeyaml",
        "@maven//:commons_codec_commons_codec",
        "@maven//:org_apache_rocketmq_rocketmq_proto",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "tests",
    srcs = glob(["src/test/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":acl",
        "//common",
        "//remoting",
        "//:test_deps",
        "@maven//:org_apache_commons_commons_lang3", 
        "@maven//:io_netty_netty_all", 
        "@maven//:org_yaml_snakeyaml",
        "@maven//:commons_codec_commons_codec",   
        "@maven//:com_alibaba_fastjson",           
    ],
    resources = glob(["src/test/resources/**/*.yml"])
)

GenTestRules(
    name = "GeneratedTestRules",
    test_files = glob(["src/test/java/**/*Test.java"]),
    deps = [
        ":tests",
    ],
    # The following tests are not hermetic. Fix them later.
    exclude_tests = [
        "src/test/java/org/apache/rocketmq/acl/plain/PlainAccessControlFlowTest",
        "src/test/java/org/apache/rocketmq/acl/plain/PlainPermissionManagerTest",
        "src/test/java/org/apache/rocketmq/acl/plain/PlainAccessValidatorTest",
        "src/test/java/org/apache/rocketmq/acl/common/AclUtilsTest",
    ],
)
