load("//bazel:GenTestRules.bzl", "GenTestRules")

java_library(
    name = "remoting",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//logging",
        "@maven//:com_alibaba_fastjson",
        "@maven//:io_netty_netty_all",
    ],
)

java_library(
    name = "tests",
    srcs = glob(["src/test/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":remoting",
        "//:test_deps",
        "@maven//:io_netty_netty_all",     
        "@maven//:com_google_code_gson_gson",   
    ],
    resources = glob(["src/test/resources/certs/*.pem"]) + glob(["src/test/resources/certs/*.key"])
)

GenTestRules(
    name = "GeneratedTestRules",
    test_files = glob(["src/test/java/**/*Test.java"]),
    deps = [
        ":tests",
    ],
)
